# pilatus_handler

./: .gitignore  Makefile  Saxs1dProfile.py  Saxs2dProfile.py  XafsData.py  cui.py  gui.py  loadtiff.py  pyproject.toml  readme.md  requirements.txt  saxs_profile.py  test.ipynb  tmp.docx  util.py
ipynb/: dafs_test.ipynb  s2d_test.ipynb
src/SpectraSpark/: __init__.py  constants.py  util.py
src/SpectraSpark/cppmod/: __init__.py  example.cpp  example.hpp  wrapper.cpp
src/SpectraSpark/plot/: __init__.py  saxsPlot.py
src/SpectraSpark/rmc/: Makefile  __init__.py  compute_i.cpp  postprocess.py  rmc.cpp  rmc.hpp  rmc2d.cpp  rmc2d.hpp  rmc2d.py  rmc2d_test.cpp  rmc2d_util.cpp  rmc2d_util.hpp  rmc_util.py  runfit.cpp  wrap.cpp
src/SpectraSpark/saxs/: .gitignore  Saxs1dProfile.py  Saxs2dProfile.py  __init__.py  calibrateTilt2d.py  fit.py  integrate.cpp  integrateTilt2d.py  p2m.py  qi1d.py  qi2d.py  sim.py
src/SpectraSpark/util/: __init__.py  basic_calculation.py  io.py  logging.py
src/SpectraSpark/xafs/: XafsData.py  __init__.py  constants.py  dafs.py  feff8_exafs.tmpl  io.py  process.py
testdata/s233sUa/: s233sUa_00000_00387.chi  s233sUa_00000_00387.par
